<resources>
    <string name="app_name">Kaligrid</string>
    <string name="action_settings">Settings</string>

    <string name="date_today">Today</string>
    <string name="date_tomorrow">Tomorrow</string>

    <!-- New event button labels -->
    <string name="button_label_new_event">Event</string>
    <string name="button_label_new_reminder">Reminder</string>
    <string name="button_label_new_fyi">FYI</string>
    <string name="button_label_cancel">Cancel</string>

    <string name="new_event_picture_button_description">Add picture to event</string>
    <string name="new_event_location_button_description">Add location to event</string>
    <string name="new_event_heading_date_time">DATE &amp; TIME</string>
    <string name="new_event_heading_send_to">SEND TO</string>
    <string name="new_event_heading_invite">INVITE</string>
    <string name="new_event_heading_reminder">REMINDER</string>
    <string name="new_event_heading_visibility">VISIBILITY</string>
    <string name="new_event_heading_reminder_for">REMINDER FOR</string>
    <string name="new_event_text_all_day">All-day</string>
    <string name="new_event_text_from">From:</string>
    <string name="new_event_text_to">To:</string>
    <string name="new_event_text_recipients">+ Recipients</string>
    <string name="new_event_text_reminder_30min">30 min before</string>
    <string name="new_event_text_reminder_me">Me</string>
    <string name="new_event_text_reminder_friends">Friends</string>
    <string name="new_event_text_visibility_friends">Friends</string>

    <string name="new_event_activity_title">New Event</string>
    <string name="new_event_activity_title_edit">Edit Event</string>
    <string name="new_event_save_button_text">SAVE</string>
    <string name="new_event_title_hint">Enter title e.g. Lunch Meeting</string>
    <string name="new_event_delete_text">Delete This Event</string>

    <string name="new_reminder_activity_title">New Reminder</string>
    <string name="new_reminder_activity_title_edit">Edit Reminder</string>
    <string name="new_reminder_save_button_text">DONE</string>
    <string name="new_reminder_title_hint">Enter title e.g. Joey\'s birthday</string>
    <string name="new_reminder_delete_text">Delete This Reminder</string>

    <string name="new_fyi_activity_title">New FYI</string>
    <string name="new_fyi_activity_title_edit">Edit FYI</string>
    <string name="new_fyi_save_button_text">SEND</string>
    <string name="new_fyi_title_hint">Enter title e.g. Hey, FYI I\'m on vacation</string>
    <string name="new_fyi_delete_text">Delete This FYI</string>

    <string name="error_invalid_date_range_title">Cannot Use Selected Date</string>
    <string name="error_invalid_date_range_message">The start date must be before the end date.</string>
    <string name="dialog_button_ok">OK</string>

    <string name="event_list_text_all_day">All Day</string>

</resources>
