<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewEventActivity">

    <include layout="@layout/toolbar_new_event_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/toolbar_new_event_top">

        <include layout="@layout/activity_new_event_base" />

        <TextView
            android:id="@+id/text_heading_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_section_margin"
            android:layout_below="@+id/new_event_base_activity"
            android:text="@string/new_event_heading_invite"
            style="@style/HeadingNewEvent" />

        <TextView
            android:id="@+id/recipients_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_field_margin"
            android:layout_below="@+id/text_heading_invite"
            android:text="@string/new_event_text_recipients" />

        <TextView
            android:id="@+id/text_heading_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_section_margin"
            android:layout_below="@+id/recipients_button"
            android:text="@string/new_event_heading_reminder"
            style="@style/HeadingNewEvent" />

        <TextView
            android:id="@+id/reminder_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_field_margin"
            android:layout_below="@+id/text_heading_reminder"
            android:text="@string/new_event_text_reminder_30min" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_heading_reminder"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:checked="true"/>

        <TextView
            android:id="@+id/text_heading_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_section_margin"
            android:layout_below="@+id/reminder_switch_text"
            android:text="@string/new_event_heading_visibility"
            style="@style/HeadingNewEvent" />

        <TextView
            android:id="@+id/visibility_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_field_margin"
            android:layout_below="@+id/text_heading_visibility"
            android:text="@string/new_event_text_visibility_friends" />
    </RelativeLayout>

</RelativeLayout>
