<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.event.edit.EditReminderActivity">

    <include layout="@layout/toolbar_new_event_top" />

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/toolbar_new_event_top">

        <include layout="@layout/activity_edit_base" />

        <TextView
            android:id="@+id/text_heading_reminder_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_section_margin"
            android:layout_below="@+id/new_event_base_activity"
            android:text="@string/new_event_heading_reminder_for"
            style="@style/HeadingNewEvent" />

        <TextView
            android:id="@+id/me_reminder_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_field_margin"
            android:layout_below="@+id/text_heading_reminder_for"
            android:text="@string/new_event_text_reminder_me" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/me_reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_heading_reminder_for"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:checked="true"/>

        <TextView
            android:id="@+id/friends_reminder_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_activity_field_margin"
            android:layout_below="@+id/me_reminder_switch_text"
            android:text="@string/new_event_text_reminder_friends" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/friends_reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/me_reminder_switch_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:checked="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/delete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignBottom="@id/activity_main"
        android:gravity="center"
        android:text="@string/new_reminder_delete_text"
        android:textColor="#F00"/>

</RelativeLayout>
