<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/new_button_margin_bottom"
    android:layout_marginRight="24dp"
    android:layout_gravity="bottom|right">

    <RelativeLayout
        android:id="@+id/button_add_fyi_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/new_button_space"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/new_fyi_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/new_button_and_label_space"
            android:layout_centerVertical="true"
            android:text="@string/button_label_new_fyi"
            style="@style/NewEventButtonLabel" />

        <ImageView
            android:id="@+id/new_fyi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_toRightOf="@id/new_fyi_button_text"
            android:background="@drawable/button_background_new_fyi"
            android:src="@drawable/icon_new_fyi"
            android:scaleType="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_add_reminder_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/new_button_space"
        android:layout_alignParentRight="true"
        android:layout_below="@id/button_add_fyi_layout">

        <TextView
            android:id="@+id/new_reminder_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/new_button_and_label_space"
            android:layout_centerVertical="true"
            android:text="@string/button_label_new_reminder"
            style="@style/NewEventButtonLabel" />

        <ImageView
            android:id="@+id/new_reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/new_reminder_button_text"
            android:background="@drawable/button_background_new_reminder"
            android:src="@drawable/icon_new_reminder"
            android:scaleType="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_add_event_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/new_button_space"
        android:layout_alignParentRight="true"
        android:layout_below="@id/button_add_reminder_layout">

        <TextView
            android:id="@+id/new_event_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/new_button_and_label_space"
            android:layout_centerVertical="true"
            android:text="@string/button_label_new_event"
            style="@style/NewEventButtonLabel" />

        <ImageView
            android:id="@+id/new_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/new_event_button_text"
            android:background="@drawable/button_background_new_event"
            android:src="@drawable/icon_new_event"
            android:scaleType="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_add_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/button_add_event_layout">

        <TextView
            android:id="@+id/cancel_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/new_button_and_label_space"
            android:layout_centerVertical="true"
            android:text="@string/button_label_cancel"
            style="@style/NewEventButtonLabel" />

        <ImageView
            android:id="@+id/new_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cancel_button_text"
            android:background="@drawable/button_background_new"
            android:src="@drawable/icon_new"
            android:scaleType="center" />

    </RelativeLayout>

</RelativeLayout>